- Fixed FS#3011 - IPv6 Display field in Site configuration too short. - Made remote IPs field for databases longer.

--- a/interface/web/themes/default/css/styles.css
+++ b/interface/web/themes/default/css/styles.css
@@ -832,7 +832,7 @@ span.small { font-size: 0.9em; }
 .selectInput.formLengthLimit { width: 85px !important; }
 .formLengthDate { width: 75px !important; }
 .formLengthIPv4 { width: 125px !important; }
-.formLengthIPv6 { width: 100% !important; }
+.formLengthIPv6 { }
 .formLengthEmailUser { width: 30% !important; }
 .formLengthEmailDomain { width: 30% !important; }
 .formLengthHalf { width: 15% !important; }
